# ovm-oss

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  deny.toml  install.sh
.github/workflows/: ci.yml
.hooks/: install.sh  pre-commit  pre-push
crates/ovm/: Cargo.toml  ovm-bundle-v1.tsv
crates/ovm-claudex/: Cargo.toml
crates/ovm-claudex/src/: codex_feedback.rs  config.rs  doctor.rs  feedback.rs  install.rs  launch.rs  main.rs  paths.rs  proxy.rs  setup.rs  uninstall.rs
crates/ovm-claudex/tests/: e2e.rs
crates/ovm-codex-skew/: Cargo.toml
crates/ovm-codex-skew/src/: lib.rs  main.rs
crates/ovm/src/: autoupdate.rs  bundle_manifest.rs  claude_install.rs  cli.rs  companions.rs  config.rs  dev_metadata.rs  error.rs  hooks.rs  main.rs  mochi.rs  node.rs  plugins.rs  product.rs  release_metadata.rs  self_manager.rs  symlink.rs  update_cache.rs  util.rs  version_manager.rs
crates/ovm/src/commands/: adopt.rs  archive.rs  autoupdate.rs  claude.rs  clean.rs  cleanup.rs  codex.rs  completions.rs  current.rs  doctor.rs  help.rs  info.rs  install.rs  launch.rs  list.rs  mod.rs  pi.rs  refresh_cache.rs  self_autoupdate.rs  self_manage.rs  self_update.rs  shortcuts.rs  stats.rs  uninstall.rs  use_version.rs  which.rs
crates/ovm/src/commands/select/: mod.rs  picker.rs
crates/ovm/src/commands/self_update/: direct.rs
crates/ovm/src/sources/: codex.rs  gcs.rs  github_releases.rs  mod.rs  npm.rs  pi.rs  registry.rs
crates/ovm/tests/: adopt.rs  cli.rs  install_flow.rs  launch.rs  launch_perf.rs  lifecycle.rs  lifecycle_pi.rs  self_manage.rs  tui.rs
docs/: architecture.md  fork-build-import.md
docs/api/: claude.json  cliproxyapi.json  codex.json  models.json  pi.json  registry.json
docs/features/: backlog.md
npm/ovm/: install.js  package.json
npm/ovm-darwin-arm64/: package.json
npm/ovm-darwin-x64/: package.json
npm/ovm-linux-arm64/: package.json
npm/ovm-linux-x64/: package.json
scripts/: bundle-manifest.sh  dev-install.sh  dev-uninstall.sh  publish-npm.sh  release.sh  update-brew-formula.sh  version-canary-test.sh
tests/compatibility/: known-features.json
tests/scripts/: bundle-contract.sh  bundle-manifest.sh  canary-missing-version.sh  dev-install-smoke.sh  e2e-command-matrix.sh  npm-install-transactional.sh  npm-package-map.sh  syntax-check.sh  update-registry-smoke.sh
