[package]
name = "ovm-claudex"
version = "0.0.3-alpha.3"
edition = "2021"
license = "MIT"
description = "claudex — Claude Code on GPT-5.6 via a local CLIProxyAPI sidecar (OVM plugin)"
repository = "https://github.com/ovm-sh/ovm"

# Binary name = package name = `ovm-claudex`, i.e. the OVM subcommand
# `ovm claudex` via PATH plugin dispatch, plus the `claudex` shim.
[[bin]]
name = "ovm-claudex"
path = "src/main.rs"

[dependencies]
console = "0.16"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
# Managed CLIProxyAPI installs (GitHub Releases download + checksum + untar).
# Same versions as the ovm core crate so the workspace shares one build.
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
sha2 = "0.11"
flate2 = "1"
tar = "0.4"
fs4 = "1.1"
semver = "1"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stderr = "allow"  # eprintln! is the project's primary UX channel
print_stdout = "allow"  # commands deliberately use stdout for data output
